--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hapi/joi": "^17.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "pug": "^3.0.2",
